packages/tree-sitter-openscad/grammar.js
    source_file: ($) => repeat($.statement),

    statement: ($) =>
      choice(
        $.assignment_statement,
        $.module_definition,
        $.function_definition,
        $.module_instantiation,
        $.include_statement,
        $.use_statement,
        $.if_statement,
        $.for_statement,
        $.echo_statement,
        $.assert_statement,
        $.block
      ),

    // Basic statements
    module_definition: ($) =>
      seq(
        'module',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', $.block)
      ),

    parameter_list: ($) =>
      seq(
        '(',
        optional($.parameter_declarations),
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    block: ($) =>
      seq(
        '{',
        repeat($.statement),
        choice(
          '}',
          // Error recovery for missing closing brace
          prec(-1, token.immediate(/[;}]/)) // Recover at semicolon or another brace
        )
      ),

    // Module instantiation with precedence
    module_instantiation: ($) =>
      choice(
        prec(
          2,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            ';'
          )
        ),
        prec(
          2,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            $.block
          )
        ),
        prec(
          1,
          seq(
            optional($.modifier),
            field('name', $.identifier),
            field('arguments', $.argument_list),
            $.statement
          )
        )
      ),

    argument_list: ($) =>
      seq(
        '(',
        optional($.arguments),
        choice(
          ')',
          // Error recovery for missing closing parenthesis
          prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
        )
      ),

    argument: ($) =>
      choice(
        $._value,
        seq(field('name', $.identifier), '=', field('value', $._value)),
        seq(field('name', $.special_variable), '=', field('value', $._value))
      ),

    // Import statements
    for_statement: ($) =>
      prec(
        1,
        seq(
          'for',
          '(',
          field('iterator', $.identifier),
          '=',
          field('range', $._value),
          ')',
          choice($.block, $.statement)
        )
      ),

    // Action statements
    arguments: ($) => commaSep1($.argument),

    // Primary expressions for the most basic literals and identifiers
    _value: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (prioritize ranges over vectors)
        prec.dynamic(10, $.range_expression), // High priority for [start:end] syntax
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Vector element rule - excludes ranges to prevent parsing conflicts
    // Used specifically in vector_expression to avoid [start:end] being parsed as vector
    _vector_element: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (excluding range expressions)
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        // Removed range expressions to prevent ambiguity with [start:end] syntax
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Non-recursive value rule for list comprehension expressions
    // Completely separate expression rules to prevent ANY recursion back to list_comprehension
    // Uses aliasing to maintain expected AST node names while preventing recursion
    binary_expression: ($) =>
      choice(
        // Logical operators
        prec.left(
          1,
          seq(
            field('left', $._value),
            field('operator', alias('||', $.logical_or_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          2,
          seq(
            field('left', $._value),
            field('operator', alias('&&', $.logical_and_operator)),
            field('right', $._value)
          )
        ),

        // Equality operators
        prec.left(
          3,
          seq(
            field('left', $._value),
            field('operator', alias('==', $.equality_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          3,
          seq(
            field('left', $._value),
            field('operator', alias('!=', $.inequality_operator)),
            field('right', $._value)
          )
        ),

        // Relational operators
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('<', $.less_than_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('<=', $.less_equal_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('>', $.greater_than_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          4,
          seq(
            field('left', $._value),
            field('operator', alias('>=', $.greater_equal_operator)),
            field('right', $._value)
          )
        ),

        // Additive operators
        prec.left(
          5,
          seq(
            field('left', $._value),
            field('operator', alias('+', $.addition_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          5,
          seq(
            field('left', $._value),
            field('operator', alias('-', $.subtraction_operator)),
            field('right', $._value)
          )
        ),

        // Multiplicative operators
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('*', $.multiplication_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('/', $.division_operator)),
            field('right', $._value)
          )
        ),
        prec.left(
          6,
          seq(
            field('left', $._value),
            field('operator', alias('%', $.modulo_operator)),
            field('right', $._value)
          )
        ),

        // Exponentiation
        prec.right(
          7,
          seq(
            field('left', $._value),
            field('operator', alias('^', $.exponentiation_operator)),
            field('right', $._value)
          )
        )
      ),

    _range_element: ($) =>
      choice(
        // Literals - direct access
        $.number,
        $.string,
        $.boolean,
        $.undef,
        $.identifier,
        $.special_variable,

        // Complex expressions - direct access (excluding range expressions)
        $.vector_expression,
        $.binary_expression,
        $.unary_expression,
        $.conditional_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.let_expression,
        $.list_comprehension,
        $.parenthesized_expression
      ),

    // Range expression with direct field access - highest precedence for [start:end] syntax
    range_expression: ($) =>
      choice(
        // Bracketed range expressions [start:end] or [start:step:end]
        prec.dynamic(
          200,
          seq(
            '[',
            field('start', $._range_element),
            ':',
            field('end', $._range_element),
            ']'
          )
        ),
        prec.dynamic(
          200,
          seq(
            '[',
            field('start', $._range_element),
            ':',
            field('step', $._range_element),
            ':',
            field('end', $._range_element),
            ']'
          )
        ),
        // Bare range expressions start:end or start:step:end (for use in other contexts)
        prec.left(
          5,
          seq(
            field('start', $._range_element),
            ':',
            field('end', $._range_element)
          )
        ),
        prec.left(
          5,
          seq(
            field('start', $._range_element),
            ':',
            field('step', $._range_element),
            ':',
            field('end', $._range_element)
          )
        )
      ),

    // Hidden bracketed range expressions for backward compatibility
    vector_expression: ($) =>
      prec(
        1,
        seq(
          '[',
          commaSep($._vector_element),
          choice(
            ']',
            // Error recovery for missing closing bracket
            prec(-1, token.immediate(/[;{]/)) // Recover at semicolon or opening brace
          )
        )
      ),

    // List comprehension with correct syntax order
    // Syntax: [for (i = range) expr] or [for (i = range) if (condition) expr]
    // Uses non-recursive value rule to prevent recursion in expr field
    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    number: ($) => {
      const decimal = /[0-9]+\.[0-9]+([eE][-+]?[0-9]+)?/;
      const integer = /[0-9]+([eE][-+]?[0-9]+)?/;
      return token(choice(decimal, integer));
    },

    string: ($) =>
      choice(
        // Double-quoted strings with escape sequence support
        seq(
          '"',
          repeat(
            choice(
              /[^"\\]+/, // Regular characters (not quote or backslash)
              /\\./ // Escape sequences (backslash followed by any character)
            )
          ),
          '"'
        ),
        // Single-quoted strings with escape sequence support
        seq(
          "'",
          repeat(
            choice(
              /[^'\\]+/, // Regular characters (not quote or backslash)
              /\\./ // Escape sequences (backslash followed by any character)
            )
          ),
          "'"
        )
      ),

    boolean: ($) => choice('true', 'false'),

    special_variable: ($) => /\$[A-Za-z_][A-Za-z0-9_]*/,
